[project]
name = "orekit-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.2",
    "orekit-jpype>=12.2.1.2",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
orekit-support = { path = ".", editable = true }

[tool.pixi.tasks]
